eks/root-LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-lb
  namespace: default  # 可以指定命名空间
spec:
  selector:
    app: root-server  # 选择需要暴露的 Pod
  ports:
    - protocol: TCP
      port: 80        # 服务的端口
      targetPort: 80 # Pod 中暴露的端口
  type: LoadBalancer
