eks/root-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: root-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080 # 集群节点上暴露的端口
  type: NodePort
